--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,130 @@
-html,
+* {
+	box-sizing: border-box;
+}
+html {
+	font-size: 100%;
+} /*16px*/
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	background-color: white;
+	font-family: "Fira Sans", sans-serif;
+	font-weight: 400;
+	line-height: 1.65;
+	margin: 0 auto;
+	max-width: 50em;
+	padding: 4em 1em;
+	color: #1d2429;
+}
+
+p {
+	margin-bottom: 1.15rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	margin: 2.75rem 0 1.05rem;
+	font-family: "Fira Sans", sans-serif;
+	font-weight: 400;
+	line-height: 1.15;
+}
+
+h1 {
+	margin-top: 0;
+	font-size: 2.488em;
+}
+
+h2 {
+	font-size: 2.074em;
+}
+
+h3 {
+	font-size: 1.728em;
+}
+
+h4 {
+	font-size: 1.44em;
+}
+
+h5 {
+	font-size: 1.2em;
+}
+
+small,
+.text_small {
+	font-size: 0.833em;
+}
+body {
+}
+
+strong {
+	color: #333;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: tomato;
+}
+p {
+	vertical-align: text-bottom;
+}
+code,
+pre {
+	font-family: "Fira Mono", monospace;
+	color: #5f6266;
 }
 
-* {
-  box-sizing: border-box;
+code {
+	font-size: 1em;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+pre {
+	border-left: 2px solid darkgray;
+	background: #f5f7f9;
+	border-bottom: 1px solid #d8dee9;
+}
+
+.container {
+	width: 100%;
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	flex-basis: 0;
+	width: 100%;
+	max-width: 100%;
+	margin: 0 auto;
+}
+.row {
+	display: flex;
+	flex-direction: row;
+	flex-grow: 1;
+	flex-basis: 0;
+	width: 100%;
+	max-width: 100%;
+	margin: 1% auto;
+}
+.row-item {
+	flex-grow: 1;
+	flex-basis: 0;
+	width: 100%;
+	max-width: 100%;
+	margin: auto 1%;
+}
+
+#map {
+	width: 800px;
+	height: 600px;
+	background-color: #000;
+}
+#waterings {
+	background-color: #333;
+	height: 300px;
+}
+#adoptions {
+	background-color: #333;
+	height: 300px;
 }
