Setup frontend map
Co-authored-by: Lucas Vogel <vogelino@users.noreply.github.com>
Co-authored-by: Dennis Ostendorf <dnsos@users.noreply.github.com>

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -128,3 +128,16 @@ pre {
 	background-color: #333;
 	height: 300px;
 }
+.tree-info {
+	/* position: absolute; */
+	font-family: sans-serif;
+	margin-top: 5px;
+	margin-left: 5px;
+	padding: 5px;
+	width: 30%;
+	/* border: 2px solid black; */
+	font-size: 14px;
+	color: #222;
+	background-color: #fff;
+	border-radius: 3px;
+}
